--- a/requirements.txt
+++ b/requirements.txt
@@ -109,3 +109,6 @@ wcwidth==0.2.14
 webcolors==25.10.0
 webencodings==0.5.1
 websocket-client==1.9.0
+imbalanced-learn==0.14.1
+xgboost==3.1.2
+lightgbm==4.6.0
