--- a/requirements.txt
+++ b/requirements.txt
@@ -115,3 +115,6 @@ lightgbm==4.6.0
 catboost==1.2.8
 fastapi==0.128.0
 uvicorn==0.40.0
+pydantic==2.12.5
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
