--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,22 @@
-version: '3.8'
-
 services:
-  # Serviço do Banco de Dados
-  db:
-    image: postgres:15  # Versão estável do Postgres
-    container_name: postgres_credito  # Nome fácil para identificar
-    restart: always
+  postgres:
+    image: postgres:15
+    container_name: postgres-credito
     environment:
-      POSTGRES_USER: admin_credito    # Seu usuário
-      POSTGRES_PASSWORD: senha_secreta_123 # Sua senha (mudaremos antes do deploy final)
-      POSTGRES_DB: db_risco_credito   # Nome do banco específico do seu projeto
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: senha123
+      POSTGRES_DB: credito_db
     ports:
-      - "5432:5432" # Porta do PC : Porta do Container
+      - "5432:5432"
     volumes:
-      - pg_data:/var/lib/postgresql/data # Onde os dados ficam salvos (PERSISTÊNCIA)
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-# Definição do volume para que os dados não sumam se você desligar o container
 volumes:
-  pg_data:
+  postgres_data:
+    driver: local
