--- a/requirements.txt
+++ b/requirements.txt
@@ -87,7 +87,7 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
 rpds-py==0.30.0
-scikit-learn==1.8.0
+scikit-learn==1.7.2
 scipy==1.16.3
 seaborn==0.13.2
 Send2Trash==1.8.3
@@ -120,3 +120,4 @@ pydantic-settings==2.12.0
 pydantic_core==2.41.5
 requests==2.32.5
 streamlit==1.52.2
+psycopg2-binary
